--- a/index.html
+++ b/index.html
@@ -15,18 +15,32 @@
         <style>
             .warning {
                 color: red;
-                font-size: 60px; 
+                font-size: 100px; 
                 animation: blink 1s infinite; 
                 position: absolute; 
                 top: 50%;
                 left: 50%;
-                transform: translate(-50%,-50%)
+                transform: translate(-60%,-50%)
             }
+        </style>
+        <style>
+            .contered {
+                position: absolute;
+                top: 50%; 
+                left: 50%;
+                transform: translate(-50%, -50%)
+                text-align; centre: 
+                    }
         </style>
     </head>
     <body>
-        <h1 class = "warning">⛔</h1>
+        <h1 class = "warning">🚨</h1>
+        <body text="#FFFAFA">
+            <p class="centered">
+                your device has been hacked
+            </p>
         <body bgcolor="#000000">
         </body>
     </body>
+
 </html>
